Restore `.collect(toList())`